[package]
name = "mai3-pumpfun-sdk"
version = "2.4.4"
edition = "2021"
authors = ["William <william@mai3.io>"]
repository = "https://github.com/MiracleAI-Labs/pumpfun-sdk"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "memecoins", "pumpfun", "pumpfun-sdk", "cpi"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "db6da5c67d896e0a94c158f69e9b235e364b3064", features = [
    "async",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "db6da5c67d896e0a94c158f69e9b235e364b3064" }
borsh = { version = "1.5", features = ["derive"] }
isahc = "1.7"
mpl-token-metadata = "5.1"
pumpfun-cpi = { path = "../pumpfun-cpi", version = "1.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.1"
tokio = "1.43"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
bs58 = "0.5"
rand = "0.8"
bincode = "1.3"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
