[package]
name = "pumpfun"
version = "2.0.2"
edition = "2021"
authors = ["Rapheal Bamidele <nhuxhr@gmail.com>"]
repository = "https://github.com/nhuxhr/pumpfun-rs"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "memecoins", "pumpfun", "cpi", "sdk"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "5d0fe35a455bc98d83e03cecdd257dfb91e8f820", features = [
    "async",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "5d0fe35a455bc98d83e03cecdd257dfb91e8f820" }
borsh = { version = "1.5", features = ["derive"] }
isahc = "1.7"
mpl-token-metadata = "5.1"
pumpfun-cpi = { path = "../pumpfun-cpi", version = "1.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.1"
tokio = "1.43"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
bs58 = "0.5"
rand = "0.8"
bincode = "1.3"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
